welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:41: error: type yellow is not a member of object java.awt.Color
	setCouleurBrosse(c:Color.yellow)
                                 ^